--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "typescript": "^4.4.2",
