--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
     "netlify-cli": "^15.0.0",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.1",
@@ -28,6 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "nodemon data/index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
