--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
@@ -26,16 +27,19 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
+    "twilio": "^4.11.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "client": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"yarn run server\"",
     "build": "react-scripts build",
-    "server": "nodemon data/index.js",
+    "server": "nodemon server/index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
       "react-app",
